# rdma_anns

./: .gitmodules  CMakeLists.txt  README.md  cp_from_nfs.sh  create_state_send_all_symlinks.sh  create_state_send_individual_symlinks.sh  create_state_send_symlinks.sh  create_symlink_partitions.sh  env_setup_no_sudo.sh  install_instructions.org  instructions.org  scp_ssh.sh
benchmark/: CMakeLists.txt  benchmark_client.hpp  benchmark_dataset.hpp  create_clusters.cpp  create_query_file.cpp  data_loading_utils.cpp  data_loading_utils.hpp  partition_prebuilt_graph.cpp  partition_prebuilt_graph.hpp  prep_data.cpp  run_benchmark.cpp  run_benchmark.sh  run_create_clusters.sh  run_setup.sh  setup.cpp
benchmark/communicator/: CMakeLists.txt  ack_rtt.json  rtt_cloudlab.json  zmq_ack.cpp  zmq_ack_rtt.cpp  zmq_rtt_local.cpp  zmq_sender.cpp  zmq_sender_ack.hpp
benchmark/json_files/cloudlab/scatter_gather/: client.json  index.json  index_3.json  server_0.json  server_1.json
benchmark/json_files/cloudlab/state_send/: client.json  client_3.json  communicator.json  communicator_3.json  index.json  index_3.json  results.txt  server_0.json  server_1.json
benchmark/json_files/local/scatter_gather/: client.json  communicator_3.json  index.json  index_3.json
benchmark/json_files/local/state_send/: index.json
benchmark/state_send/: CMakeLists.txt  benchmark_client.cpp  benchmark_client.hpp  run_benchmark.cpp  run_benchmark_state_send_local.cpp  run_benchmark_state_send_tcp.cpp
benchmark/state_send/json_files/state_send/cloudlab/: client.json  server_0.json  server_1.json
benchmark/state_send/scatter_gather/: client.json  communicator.json  server_0.json  server_1.json
benchmark/state_send/single_server_testing/: client.json  comparison.txt  server.json
benchmark/state_send/state_send/: client.json  server_0.json  server_1.json
benchmark/state_send/state_send_no_partition/: client.json  server_0.json  server_1.json
benchmark/task_push/: CMakeLists.txt  benchmark_client.hpp  benchmark_dataset.hpp  create_query_file.cpp  data_loading_utils.hpp  prep_data.cpp  run_benchmark.cpp  run_prep_data.sh  run_setup.sh  setup.cpp
cfg/: dfgs.json  layout.json  udl_dlls.cfg
cfg/n0/: derecho.cfg
cfg/n1/: derecho.cfg
cfg/n2/: derecho.cfg
cfg/n3/: derecho.cfg
cfg_rdma/: dfgs.json  udl_dlls.cfg
cfg_rdma/n0/: derecho.cfg
cfg_rdma/n1/: derecho.cfg
cfg_rdma/n2/: derecho.cfg
cfg_rdma/n3/: derecho.cfg
dummy_udl/cfg/: dfgs.json
dummy_udl/cfg_ack/: layout.json  udl_dlls.cfg
dummy_udl/cfg_ack_rdma/: dfgs.json
dummy_udl/cfg_no_deserialize_rdma/: dfgs.json
dummy_udl/cfg_no_deserialize_tcp/: dfgs.json  udl_dlls.cfg
dummy_udl/cfg_no_op_rdma/: layout.json
dummy_udl/cfg_rdma/: dfgs.json  (+1 more)
dummy_udl/src/: CMakeLists.txt  benchmark_client.hpp  benchmark_client_ack.hpp  dummy_ack.cpp  dummy_ack.hpp  dummy_no_deserialize.cpp  dummy_no_deserialize.hpp  dummy_no_op.cpp  dummy_udl.cpp  dummy_udl.hpp  log_tags.csv  run_benchmark.cpp  run_benchmark_ack.cpp  run_benchmark_no_deserialize.cpp  run_benchmark_no_op.cpp  serialize_utils.hpp  udl_path_and_index.hpp
process_data/: data_analysis_notebook.ipynb  get_log_time.py  process_data.py
scripts/: analyze_log.py  cloudlab_addresses.sh  copy_big_files_nfs.sh  create_indices.sh  establish_connection_all_cloudlab.sh  exp_addresses.sh  plot_cmps_io_beam_widths.py  plot_cmps_io_servers.py  plot_cmps_recall_dataset_server.py  plot_counter_data.py  plot_hops_L.py  plot_hops_vs_inter_hops.py  plot_hops_vs_inter_hops_one_plot.py  plot_inter_hops_beam.py  plot_io_inter_recall.py  plot_latency_recall.py  plot_latency_vs_send_rate_box_plot.py  plot_overlap_scalability_comparison.py  plot_qps_recall.py  plot_qps_recall_beam_width_comparison.py  plot_qps_recall_dataset_server_comparison.py  plot_qps_recall_overlap_comparison.py  plot_qps_recall_single_server.py  plot_query_data.py  plot_query_data_comparison.py  plot_scalability.py  plot_throughput_latency_beam_width_comparison.py  plotting.py  run_all_bigann.sh  run_all_deep100M.sh  run_all_experiments.sh  run_all_msspacev.sh  run_balance_batch_all.sh  run_bigann_100M.sh  run_experiment.sh  run_experiments.sh  scp_file_to_nodes.sh  scp_helper.sh  setup_exp_vars.sh
src/: CMakeLists.txt  CMakeLists.txt~  concurrent_neighbor_priority_queue.hpp  concurrent_search_data_structures.hpp  get_request_manager.hpp  global_index.hpp  global_search_udl.cpp  global_search_udl.hpp  head_index_search_udl.cpp  head_index_search_udl.cpp~  head_index_search_udl.hpp  head_index_search_udl.hpp~  in_mem_search_index.hpp  log_tags.csv  serialize_utils.cpp  serialize_utils.cpp~  serialize_utils.hpp  serialize_utils.hpp~  ssd_search_index.hpp  udl_path_and_index.hpp
src/communicator/: CMakeLists.txt  communicator.cpp  get_version.cpp  rdma_p2p_test_server.cpp  sample.json  zmq_p2p_server.cpp
src/communicator/rdma_com/: rdma_manager.cpp
src/state_send/: CMakeLists.txt  aux_utils.cpp  build_disk_index_from_bin_graph.cpp  build_memory_index.cpp  convert_old_partition_assignment.cpp  convert_old_pq_format.cpp  convert_overlap_partition_assignment.cpp  convert_parlayann_graph_file.cpp  create_base_file_from_loc_file.cpp  create_graph_file_from_disk_index.cpp  create_medoid_file.cpp  create_overlap_partition_loc_files.cpp  create_partition_graph_file.cpp  create_partition_loc_files.cpp  create_pq_data.cpp  create_random_partition_files.cpp  create_scatter_gather_indices.cpp  create_state_send_indices.cpp  disk_utils.cpp  distance.cpp  distributedann_impl.cpp  distributedann_orchestration_thread.cpp  distributedann_scoring_thread.cpp  gen_random_slice.cpp  graph_partitioning_utils.cpp  index.cpp  io_submission_thread.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition_and_pq.cpp  query.json  query_buf.cpp  search_state.cpp  search_thread.cpp  ssd_partition_index.cpp  state_send_client.cpp  state_send_server.cpp  test.cpp  test_client.json  test_communicator.json  (+4 more)
src/task_push/: CMakeLists.txt  global_search_udl.cpp  head_index_search_udl.cpp  serialize_utils.cpp
test/: CMakeLists.txt  serialize_test.cpp
(+73 files in other folders)
